fixed broken css

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -239,7 +239,7 @@ column-count: 3;
 }
 
 .footer_logo img {
-  max-width:100%
+  max-width:100%;
   width: 300px;
   margin-top: 2em;
 }
